<resources>
    <string name="button">Button</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detail">detail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_tree__step1">AddTree_Step1</string>
    <string name="pictureicon" translatable="false">&#xf03e;</string>
    <string name="riskicon" translatable="false">&#xf0a1;</string>
    <string name="diseaseicon" translatable="false">&#xf0fa;</string>
    <string name="deathicon" translatable="false">&#xf06d;</string>
    <string name="curiosityicon" translatable="false">&#xf05a;</string>
    <string name="measurementicon" translatable="false">&#xf034;</string>
    <string name="commenticon" translatable="false">&#xf086;</string>
    <string name="plantingicon" translatable="false">&#xe200;</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="birthday">Birthday</string>
    <string name="Site">Site</string>
    <string name="email">E-mail</string>
    <string name="education">Education</string>
    <string name="companies">Companies</string>
    <string name="trees">Trees</string>
    <string name="my_trees_default_text">No tree found</string>
    <string name="species">Species</string>
    <string name="my_species_default_text">No species found</string>
    <string name="new_specie">New species</string>
    <string name="btn_create_specie">Create specie</string>
    <string name="back">"Come back "</string>
    <string name="search">Search</string>
    <string name="register_specie">Register_specie</string>
    <string name="scientific_name">Scientific name</string>
    <string name="scientificName">Scientific Name</string>
    <string name="taxonomic_hierarchy">Taxonomic Hierarchy</string>
    <string name="kingdom">Kingdom</string>
    <string name="filo">Phylum</string>
    <string name="specie_class">Class</string>
    <string name="order">Order</string>
    <string name="family">Family</string>
    <string name="kind">Kind specie</string>
    <string name="choose_image">Choose image</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="site_blog">Site/Blog</string>
    <string name="relationship">Relationship with environmental sector</string>
    <string name="taxonomist">Taxonomist</string>
    <string name="technical_consultant">Technical consultant</string>
    <string name="forestry_engineer">Forestry Engineer</string>
    <string name="environmental_engineer">Environmental engineer</string>
    <string name="botanical">Botanist</string>
    <string name="nature_lover">Nature lover</string>
    <string name="profile_location">Location</string>
    <string name="header_menu_pic">Profile picture</string>
    <string name="take_pic">Take a picture</string>
    <string name="open_gallery">Open gallery</string>
    <string name="remove_pic">Remove photo</string>
    <string name="formation">Formation</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_more_info">Add more info</string>
    <string name="next">Proceed</string>
    <string name="company">Company</string>
    <string name="responsible_nursery">Responsible nursery</string>
    <string name="seed_carrier">Seed carrier</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="near_to_address">Near to address</string>
    <string name="yes_seed">Yes</string>
    <string name="insertPicture">Insert a picture</string>
    <string name="identification">Identification</string>
    <string name="geolocation">Geolocation</string>
    <string name="header_menu_add_tree">Add image</string>
    <string name="access">Acess</string>
    <string name="accessing">Acessing</string>
    <string name="add_tree">Add Tree</string>
    <string name="addPhotos">Add photos</string>
    <string name="app_name">Ecovoice mobile</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="logo_name">Ecovoice</string>
    <string name="btn_create_acount">I do not have an account</string>
    <string name="btn_detail">Detail</string>
    <string name="btn_send_instructions">Send me instructions</string>
    <string name="commonName">Common name</string>
    <string name="connection_timeout">"Connection timed out "</string>
    <string name="create_account">Create an account</string>
    <string name="create_tree">Place tree</string>
    <string name="device_not_connected">"Device not connected "</string>
    <string name="dont_know">Don\'t know</string>
    <string name="email_already_used">Email already in use</string>
    <string name="email_blank">Email blank</string>
    <string name="email_not_found">Email not found</string>
    <string name="feedback">Feedback</string>
    <string name="first_name_blank">Name blank</string>
    <string name="register">Register</string>
    <string name="have_account_question">Already have an account?</string>
    <string name="moreInfo">Additional info</string>
    <string name="location">Tree location</string>
    <string name="successInsert">Tree Inserted!</string>
    <string name="title_activity_cadastro_de__arvore">Register Tree</string>
    <string name="profile">Profile</string>
    <string name="news_feed">News feed</string>
    <string name="my_companies">My companies</string>
    <string name="users">Users</string>
    <string name="res_scient_name">Not identified</string>
    <string name="res_com_name">Common name</string>
    <string name="res_prof">Profile</string>
    <string name="res_pos">Position</string>
    <string name="res_link_prof">Profile link</string>
    <string name="res_date_add">Creation date</string>
    <string name="observations">Observations</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="password_blank">Password blank</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember my data</string>
    <string name="hint_email">Your email</string>
    <string name="hint_password">Your password</string>
    <string name="login_divider">Login</string>
    <string name="forgot_password_divider">Password recovery</string>
    <string name="register_divider">Register</string>
    <string name="hint_register_email">Your email</string>
    <string name="hint_register_name">First name</string>
    <string name="hint_register_last_name">Last name</string>
    <string name="hint_register_password">Create your password</string>
    <string name="hint_register_password_confirm">Confirm your password</string>
    <string name="sociedades">Companies</string>
    <string name="logout_sucess">Successfully disconnected</string>
    <string name="user_not_authenticated">Unauthenticated user</string>
    <string name="user_created_success">User created successfully</string>
    <string name="passwords_different">The passwords are different</string>
    <string name="user_logged">Login successfully done</string>
    <string name="last_name_blank">Last name in blank</string>
    <string name="password_confirmation_blank">Confirmation password blank</string>
    <string name="logout_error">Error when you log out</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm the new password</string>
    <string name="new_password_key">Enter the code sent by email</string>
    <string name="invalid_key">Invalid validation code</string>
    <string name="validation_code">Validation code</string>
    <string name="authenticate">Authenticate</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="settings">Settings</string>
    <string name="title_activity_tab_news_feed">Activity_tab_news_feed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="new_tree_location">Location</string>
    <string name="images">Images</string>
    <string name="time_line">Timeline</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_trees">My trees</string>
    <string name="stats">Stats</string>
    <string name="position">Position</string>
    <string name="position_text">You have more trees than the users</string>
    <string name="user_tree_portfolio_text">Users with the largest tree portfolios</string>
    <string name="address">Address</string>
    <string name="set_location">Define your location</string>
    <string name="conclude">Conclude</string>
    <string name="edit_profile_change_password">I want to change my password</string>
    <string name="personal_information">Personal information</string>
    <string name="your_location">Your location</string>
    <string name="education_companies">Education and companies</string>
    <string name="title_activity_teste">TESTE</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="forgot_me">Forget my data</string>
    <string name="new_tree_menu">New Tree</string>
    <string name="title_activity_menu_map" translatable="false">" "</string>
    <string name="send_feedback">Send feedback</string>
    <string name="edit">Edit</string>
    <string name="cientific_search_hint">Search...</string>
    <string name="empty_images_trees">No image selected</string>


</resources>
