<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1"  android:checkableBehavior="all">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_black_48dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_profile_edit"
            android:icon="@drawable/ic_create_black_48dp"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_48dp"
            android:title="@string/feedback" />

    </group>

    <group android:id="@+id/group2" android:checkableBehavior="all" >

            <item
                android:id="@+id/nav_feed"
                android:icon="@drawable/ic_dvr_black_48dp"
                android:title="@string/news_feed" />
            <item
                android:id="@+id/nav_trees"
                android:icon="@drawable/tree"
                android:title="@string/trees" />

            <item
                android:id="@+id/nav_species"
                android:icon="@drawable/ic_gesture_black_48dp"
                android:title="@string/species" />
            <item
                android:id="@+id/nav_companies"
                android:icon="@drawable/ic_business_black_48dp"
                android:title="@string/companies" />


            <item
                android:id="@+id/nav_my_companies"
                android:icon="@drawable/ic_business_center_black_48dp"
                android:title="@string/my_companies" />
            <item
                android:id="@+id/nav_users"
                android:icon="@drawable/ic_people_black_48dp"
                android:title="@string/users" />


    </group>

</menu>
