<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/verde">


    <TextView
        android:id="@+id/result_scient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:text="@string/res_scient_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/res_com_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/result_scient_name"
        android:layout_alignStart="@+id/result_scient_name"
        android:layout_below="@+id/result_scient_name"
        android:text="@string/res_com_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/res_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/res_com_name"
        android:layout_alignStart="@+id/res_com_name"
        android:layout_below="@id/res_com_name"
        android:layout_centerInParent="false"
        android:layout_marginTop="0dp"
        android:text="@string/res_prof"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/res_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/res_prof"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignStart="@+id/res_prof"
        android:layout_alignTop="@+id/res_prof"
        android:layout_below="@+id/res_prof"
        android:layout_marginTop="20dp"
        android:text="@string/res_pos"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/res_prof_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/res_pos"
        android:layout_alignStart="@+id/res_pos"
        android:layout_below="@+id/res_pos"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="4dp"
        app:srcCompat="@drawable/default_avatar" />

    <TextView
        android:id="@+id/res_link_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/res_prof_img"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/res_prof_img"
        android:layout_toRightOf="@+id/res_prof_img"
        android:text="@string/res_link_prof" />

    <TextView
        android:id="@+id/res_date_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/res_link_prof"
        android:layout_alignStart="@+id/res_link_prof"
        android:layout_below="@+id/res_link_prof"
        android:text="@string/res_date_add" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_dialog_close_dark"
        android:onClick="closePanel" />

</RelativeLayout>